--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 </head>
 <body>
     <h1>Chili</h1>
-    <p></p>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Alias commodi dolore at, velit est ipsam corrupti eum totam cumque impedit ullam rem laborum sed. Fuga esse in aliquam optio laudantium!</p>
 </body>
 </html>
