--- a/index.html
+++ b/index.html
@@ -1,15 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chili</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
+        crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
+    <nav class="navbar fixed-top navbar-dark bg-dark">
+        <div class="container-fluid">
+            <a class="navbar-brand active" href="./index.html">
+                <img src="./images/transparent-chili-pepper-capsicum-vegetable-cartoon-paprika-smm-instagram5e6104e0cb8703.3145828715834165448337.png"
+                    alt="Logo" height="50" class="d-inline-block align-text-center">
+                Chili
+            </a>
+            <a class="d-inline-block align-text-center" href="./ingredients.html">Ingredients</a>
+            <a class="d-inline-block align-text-center" href="./purchase.html">Purchase</a>
+        </div>
+    </nav>
+
+    <br>
+    <br>
+    <br>
     <h1>Chili</h1>
-    <p></p>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis architecto aut quod repellat, eligendi earum vel
+        ad ex quaerat, repellendus, provident ipsum eaque? Non incidunt nam corporis maiores exercitationem odio!</p>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquam autem impedit necessitatibus nesciunt, quis vel
+        assumenda! Animi adipisci nulla nemo dolorem recusandae velit, fugit harum dolorum magni numquam totam
+        reiciendis.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum id sapiente tempore ut magnam pariatur
+        consequatur, odit, perspiciatis sequi fuga accusamus tenetur dicta nobis molestias voluptatibus sed quidem enim
+        maxime.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit architecto soluta magnam, fugit mollitia
+        repellat? Quasi, accusantium rerum voluptas eius voluptates totam cupiditate veniam corrupti maxime animi
+        perspiciatis. Non, voluptatum!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit architecto soluta magnam, fugit mollitia
+        repellat? Quasi, accusantium rerum voluptas eius voluptates totam cupiditate veniam corrupti maxime animi
+        perspiciatis. Non, voluptatum!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit architecto soluta magnam, fugit mollitia
+        repellat? Quasi, accusantium rerum voluptas eius voluptates totam cupiditate veniam corrupti maxime animi
+        perspiciatis. Non, voluptatum!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit architecto soluta magnam, fugit mollitia
+        repellat? Quasi, accusantium rerum voluptas eius voluptates totam cupiditate veniam corrupti maxime animi
+        perspiciatis. Non, voluptatum!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit architecto soluta magnam, fugit mollitia
+        repellat? Quasi, accusantium rerum voluptas eius voluptates totam cupiditate veniam corrupti maxime animi
+        perspiciatis. Non, voluptatum!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit architecto soluta magnam, fugit mollitia
+        repellat? Quasi, accusantium rerum voluptas eius voluptates totam cupiditate veniam corrupti maxime animi
+        perspiciatis. Non, voluptatum!</p>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis architecto aut quod repellat, eligendi earum vel
+        ad ex quaerat, repellendus, provident ipsum eaque? Non incidunt nam corporis maiores exercitationem odio!</p>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis architecto aut quod repellat, eligendi earum vel
+        ad ex quaerat, repellendus, provident ipsum eaque? Non incidunt nam corporis maiores exercitationem odio!</p>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis architecto aut quod repellat, eligendi earum vel
+        ad ex quaerat, repellendus, provident ipsum eaque? Non incidunt nam corporis maiores exercitationem odio!</p>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis architecto aut quod repellat, eligendi earum vel
+        ad ex quaerat, repellendus, provident ipsum eaque? Non incidunt nam corporis maiores exercitationem odio!</p>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis architecto aut quod repellat, eligendi earum vel
+        ad ex quaerat, repellendus, provident ipsum eaque? Non incidunt nam corporis maiores exercitationem odio!</p>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis architecto aut quod repellat, eligendi earum vel
+        ad ex quaerat, repellendus, provident ipsum eaque? Non incidunt nam corporis maiores exercitationem odio!</p>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis architecto aut quod repellat, eligendi earum vel
+        ad ex quaerat, repellendus, provident ipsum eaque? Non incidunt nam corporis maiores exercitationem odio!</p>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis architecto aut quod repellat, eligendi earum vel
+        ad ex quaerat, repellendus, provident ipsum eaque? Non incidunt nam corporis maiores exercitationem odio!</p>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis architecto aut quod repellat, eligendi earum vel
+        ad ex quaerat, repellendus, provident ipsum eaque? Non incidunt nam corporis maiores exercitationem odio!</p>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis architecto aut quod repellat, eligendi earum vel
+        ad ex quaerat, repellendus, provident ipsum eaque? Non incidunt nam corporis maiores exercitationem odio!</p>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis architecto aut quod repellat, eligendi earum vel
+        ad ex quaerat, repellendus, provident ipsum eaque? Non incidunt nam corporis maiores exercitationem odio!</p>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis architecto aut quod repellat, eligendi earum vel
+        ad ex quaerat, repellendus, provident ipsum eaque? Non incidunt nam corporis maiores exercitationem odio!</p>
+
 </body>
+
 </html>
