--- a/index.html
+++ b/index.html
@@ -31,14 +31,78 @@
     <br>
     <br>
     <h1>Chili</h1>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis architecto aut quod repellat, eligendi earum vel
-        ad ex quaerat, repellendus, provident ipsum eaque? Non incidunt nam corporis maiores exercitationem odio!</p>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquam autem impedit necessitatibus nesciunt, quis vel
-        assumenda! Animi adipisci nulla nemo dolorem recusandae velit, fugit harum dolorum magni numquam totam
-        reiciendis.</p>
+    <div>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis architecto aut quod repellat, eligendi earum
+            vel
+            ad ex quaerat, repellendus, provident ipsum eaque? Non incidunt nam corporis maiores exercitationem odio!
+        </p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquam autem impedit necessitatibus nesciunt, quis
+            vel assumenda! Animi adipisci nulla nemo dolorem recusandae velit, fugit harum dolorum magni numquam totam
+            reiciendis.</p>
+    </div>
+    <div>
+
+        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
+            <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
+                <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+                        aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                        aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                        aria-label="Slide 3"></button>
+                </div>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="./images/chili-con-carne.jpeg" class="d-block w-100" alt="Chili con carne">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5 class="title">Chili con carne</h5>
+                            <p class="description">Some delicious beef chili with kidney beans and rice.</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./images/vege-chili.jpeg" class="d-block w-100" alt="Vegetarian chili">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5 class="title">Vegetarian chili</h5>
+                            <p class="description">Yummy vegetarian chili with sour cream and flatbread.</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./images/vegan-chili.webp" class="d-block w-100" alt="Vegan chili">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5 class="title">Vegan chili</h5>
+                            <p class="description">Large pot of vegan chili.</p>
+                        </div>
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+            
+        <!-- </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+            data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+            data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
+    </div> -->
+    </div>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum id sapiente tempore ut magnam pariatur
-        consequatur, odit, perspiciatis sequi fuga accusamus tenetur dicta nobis molestias voluptatibus sed quidem enim
-        maxime.</p>
+        consequatur, odit, perspiciatis sequi fuga accusamus tenetur dicta nobis molestias voluptatibus sed quidem
+        enim maxime.</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit architecto soluta magnam, fugit mollitia
         repellat? Quasi, accusantium rerum voluptas eius voluptates totam cupiditate veniam corrupti maxime animi
         perspiciatis. Non, voluptatum!</p>
@@ -57,30 +121,54 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit architecto soluta magnam, fugit mollitia
         repellat? Quasi, accusantium rerum voluptas eius voluptates totam cupiditate veniam corrupti maxime animi
         perspiciatis. Non, voluptatum!</p>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis architecto aut quod repellat, eligendi earum vel
-        ad ex quaerat, repellendus, provident ipsum eaque? Non incidunt nam corporis maiores exercitationem odio!</p>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis architecto aut quod repellat, eligendi earum vel
-        ad ex quaerat, repellendus, provident ipsum eaque? Non incidunt nam corporis maiores exercitationem odio!</p>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis architecto aut quod repellat, eligendi earum vel
-        ad ex quaerat, repellendus, provident ipsum eaque? Non incidunt nam corporis maiores exercitationem odio!</p>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis architecto aut quod repellat, eligendi earum vel
-        ad ex quaerat, repellendus, provident ipsum eaque? Non incidunt nam corporis maiores exercitationem odio!</p>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis architecto aut quod repellat, eligendi earum vel
-        ad ex quaerat, repellendus, provident ipsum eaque? Non incidunt nam corporis maiores exercitationem odio!</p>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis architecto aut quod repellat, eligendi earum vel
-        ad ex quaerat, repellendus, provident ipsum eaque? Non incidunt nam corporis maiores exercitationem odio!</p>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis architecto aut quod repellat, eligendi earum vel
-        ad ex quaerat, repellendus, provident ipsum eaque? Non incidunt nam corporis maiores exercitationem odio!</p>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis architecto aut quod repellat, eligendi earum vel
-        ad ex quaerat, repellendus, provident ipsum eaque? Non incidunt nam corporis maiores exercitationem odio!</p>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis architecto aut quod repellat, eligendi earum vel
-        ad ex quaerat, repellendus, provident ipsum eaque? Non incidunt nam corporis maiores exercitationem odio!</p>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis architecto aut quod repellat, eligendi earum vel
-        ad ex quaerat, repellendus, provident ipsum eaque? Non incidunt nam corporis maiores exercitationem odio!</p>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis architecto aut quod repellat, eligendi earum vel
-        ad ex quaerat, repellendus, provident ipsum eaque? Non incidunt nam corporis maiores exercitationem odio!</p>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis architecto aut quod repellat, eligendi earum vel
-        ad ex quaerat, repellendus, provident ipsum eaque? Non incidunt nam corporis maiores exercitationem odio!</p>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis architecto aut quod repellat, eligendi earum
+        vel
+        ad ex quaerat, repellendus, provident ipsum eaque? Non incidunt nam corporis maiores exercitationem odio!
+    </p>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis architecto aut quod repellat, eligendi earum
+        vel
+        ad ex quaerat, repellendus, provident ipsum eaque? Non incidunt nam corporis maiores exercitationem odio!
+    </p>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis architecto aut quod repellat, eligendi earum
+        vel
+        ad ex quaerat, repellendus, provident ipsum eaque? Non incidunt nam corporis maiores exercitationem odio!
+    </p>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis architecto aut quod repellat, eligendi earum
+        vel
+        ad ex quaerat, repellendus, provident ipsum eaque? Non incidunt nam corporis maiores exercitationem odio!
+    </p>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis architecto aut quod repellat, eligendi earum
+        vel
+        ad ex quaerat, repellendus, provident ipsum eaque? Non incidunt nam corporis maiores exercitationem odio!
+    </p>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis architecto aut quod repellat, eligendi earum
+        vel
+        ad ex quaerat, repellendus, provident ipsum eaque? Non incidunt nam corporis maiores exercitationem odio!
+    </p>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis architecto aut quod repellat, eligendi earum
+        vel
+        ad ex quaerat, repellendus, provident ipsum eaque? Non incidunt nam corporis maiores exercitationem odio!
+    </p>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis architecto aut quod repellat, eligendi earum
+        vel
+        ad ex quaerat, repellendus, provident ipsum eaque? Non incidunt nam corporis maiores exercitationem odio!
+    </p>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis architecto aut quod repellat, eligendi earum
+        vel
+        ad ex quaerat, repellendus, provident ipsum eaque? Non incidunt nam corporis maiores exercitationem odio!
+    </p>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis architecto aut quod repellat, eligendi earum
+        vel
+        ad ex quaerat, repellendus, provident ipsum eaque? Non incidunt nam corporis maiores exercitationem odio!
+    </p>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis architecto aut quod repellat, eligendi earum
+        vel
+        ad ex quaerat, repellendus, provident ipsum eaque? Non incidunt nam corporis maiores exercitationem odio!
+    </p>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis architecto aut quod repellat, eligendi earum
+        vel
+        ad ex quaerat, repellendus, provident ipsum eaque? Non incidunt nam corporis maiores exercitationem odio!
+    </p>
 
 </body>
 
