created media query for portrait on phone

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <nav class="navbar fixed-top navbar-dark bg-dark">
         <div class="container-fluid">
             <a class="navbar-brand active" href="./index.html">
-                <img src="./images/transparent-chili-pepper-capsicum-vegetable-cartoon-paprika-smm-instagram5e6104e0cb8703.3145828715834165448337.png"
+                <img src="./images/chili-logo.png"
                     alt="Logo" height="50" class="d-inline-block align-text-center">
                 Chili
             </a>
@@ -88,18 +88,6 @@
                 </button>
             </div>
             
-        <!-- </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
-            data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
-            data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-        </button>
-    </div> -->
     </div>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum id sapiente tempore ut magnam pariatur
         consequatur, odit, perspiciatis sequi fuga accusamus tenetur dicta nobis molestias voluptatibus sed quidem
