--- a/ingredients.html
+++ b/ingredients.html
@@ -11,15 +11,14 @@
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
       crossorigin="anonymous"></script>
+   <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
    <nav class="navbar fixed-top navbar-dark bg-dark">
       <div class="container-fluid">
          <a class="navbar-brand" href="./index.html">
-            <img
-               src="./images/transparent-chili-pepper-capsicum-vegetable-cartoon-paprika-smm-instagram5e6104e0cb8703.3145828715834165448337.png"
-               alt="Logo" height="50" class="d-inline-block align-text-center">
+            <img src="./images/chili-logo.png" alt="Logo" height="50" class="d-inline-block align-text-center">
             Chili
          </a>
          <a class="d-inline-block align-text-center active" href="./ingredients.html">Ingredients</a>
