final tweaks before presentation

--- a/purchase.html
+++ b/purchase.html
@@ -55,7 +55,51 @@
             repellat? Quasi, accusantium rerum voluptas eius voluptates totam cupiditate veniam corrupti maxime animi
             perspiciatis. Non, voluptatum!</p>
     </div>
-
+    <br>
+    <br>
+    <div class="accordion accordion-flush where" id="accordionFlushExample">
+        <div class="accordion-item">
+            <h2 class="accordion-header" id="flush-headingOne">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                    Supermarkets
+                </button>
+            </h2>
+            <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne"
+                data-bs-parent="#accordionFlushExample">
+                <div class="accordion-body">The ingredients for a chili can be purchased fresh from most supermarkets.
+                </div>
+            </div>
+        </div>
+        <div class="accordion-item">
+            <h2 class="accordion-header" id="flush-headingTwo">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                    Farmers' markets
+                </button>
+            </h2>
+            <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo"
+                data-bs-parent="#accordionFlushExample">
+                <div class="accordion-body">You can also purchase most ingredients fresh from farmers' markets. Often much better quality and much fresher than supermarket products too.
+                </div>
+            </div>
+        </div>
+        <div class="accordion-item">
+            <h2 class="accordion-header" id="flush-headingThree">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+                    Grow your own
+                </button>
+            </h2>
+            <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree"
+                data-bs-parent="#accordionFlushExample">
+                <div class="accordion-body">If you have the patience and the skills, you can grow your own produce. Given enough practice, your produce will be far superior to any purchased in a supermarket or farmers' markets, and much fresher and cleaner too!
+                </div>
+            </div>
+        </div>
+    </div>
+    <br>
+    <br>
     <div>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit architecto soluta magnam, fugit mollitia
             repellat? Quasi, accusantium rerum voluptas eius voluptates totam cupiditate veniam corrupti maxime animi
